# mavlink_ros2_bridge

./: CLAUDE.md  CMakeLists.txt  README.md  package.xml
.claude/: settings.local.json
docs/: design.md  nat-traversal-investigation.md
include/mavlink_ros2_bridge/: mavlink_bridge_node.hpp  udp_socket.hpp
launch/: mavlink_bridge.launch.py
src/: mavlink_bridge_node.cpp  udp_socket.cpp
